Alignment fix

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ h1 {
     margin: 0 auto -30px; /* the bottom margin is the negative value of the footer's height */
 }
 
-#contentArea {
+#textArea {
 	font-family:Arial, Helvetica, sans-serif;
 	width:960px;
 	margin:auto;
@@ -79,8 +79,7 @@ h1 {
 	padding-top:50px;
 }
 
-#contentArea img {
-	padding:20px;
+#images {
 }
 
 footer {
